# test_example

./: .gitignore
back/: CMakeLists.txt  api.yaml  main.cc
back/controllers/: PaintGraphics.cpp  PaintGraphics.h  unzip_util.cpp  unzip_util.h
back/test/: CMakeLists.txt  test_main.cc
front/: CMakeLists.txt  README.md  main.cpp
front/controller/: transmission_data.cpp  transmission_data.h
front/model/: websocketclient.cpp  websocketclient.h
front/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
